add test functionality
